#477 - Change configurable time intervals to ISO 8601 durations
- change all configurable timelimits with formerly fixed units to iso duration strings

--- a/.github/integration-test/docker-compose.yml
+++ b/.github/integration-test/docker-compose.yml
@@ -51,13 +51,13 @@ services:
       DSF_ORGANIZATION_ID: "Test_ZARS"
       # ---- privacy
       PRIVACY_QUOTA_SOFT_CREATE_AMOUNT: 3
-      PRIVACY_QUOTA_SOFT_CREATE_INTERVALMINUTES: 1
+      PRIVACY_QUOTA_SOFT_CREATE_INTERVAL: PT1M
       PRIVACY_QUOTA_HARD_CREATE_AMOUNT: 50
-      PRIVACY_QUOTA_HARD_CREATE_INTERVALMINUTES: 10080
-      PRIVACY_QUOTA_READ_SUMMARY_POLLINGINTERVALSECONDS: 10
-      PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_POLLINGINTERVALSECONDS: 10
+      PRIVACY_QUOTA_HARD_CREATE_INTERVAL: P7D
+      PRIVACY_QUOTA_READ_SUMMARY_POLLINGINTERVAL: PT10S
+      PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_POLLINGINTERVAL: PT10S
       PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_AMOUNT: 3
-      PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_INTERVALSECONDS: 7200
+      PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_INTERVAL: PT2H
       PRIVACY_THRESHOLD_RESULTS: 0
       PRIVACY_THRESHOLD_SITES: 0
       # ---- Elastic Search
