--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,7 @@ services:
         target: /var/lib/postgresql/data
   dataportal-elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.17.3
+    restart: unless-stopped
     container_name: dataportal-elastic
     ports:
       - '9200:9200'
