#533 - Elastic Search queries with filters provide way too many results
- add minimumShouldMatch(1) to queries
- update elasticsearch in compose files to 9.0.2
- add check to github actions if unfiltered results are >= filtered results

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,7 +150,7 @@ jobs:
     needs: tests
     runs-on: ubuntu-latest
     env:
-      ONTOLOGY_GIT_TAG: v6.8.0-alpha.1-experimental.1
+      ONTOLOGY_GIT_TAG: v3.8.0
       ELASTIC_HOST: http://localhost:9200
       ELASTIC_FILEPATH: https://github.com/medizininformatik-initiative/fhir-ontology-generator/releases/download/TAGPLACEHOLDER/
       ELASTIC_FILENAME: elastic.zip
