Implement FHIR Async Request Pattern for Direct Broker using CQL
Added configuration property `broker.direct.cql.useAsyncRequestPattern`
with default value true to support asynchronous request handling when
the Direct Broker is using CQL queries. This enhancement improves
performance by allowing non-blocking request processing, particularly
useful for complex or long-running CQL queries.

The change is part of the broker client configuration and can be
controlled via the environment variable
`BROKER_CLIENT_DIRECT_CQL_USE_ASYNC_REQUEST_PATTERN` when needed.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -88,6 +88,8 @@ app:
             secret: ${BROKER_CLIENT_DIRECT_AUTH_OAUTH_CLIENT_SECRET:}
       enabled: ${BROKER_CLIENT_DIRECT_ENABLED:false}
       useCql: ${BROKER_CLIENT_DIRECT_USE_CQL:false}
+      cql:
+        useAsyncRequestPattern: ${BROKER_CLIENT_DIRECT_CQL_USE_ASYNC:false}
       obfuscateResultCount: ${BROKER_CLIENT_OBFUSCATE_RESULT_COUNT:false}
       timeout: ${BROKER_CLIENT_DIRECT_TIMEOUT:PT20S}
     aktin:
