--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ springdoc:
   swagger-ui:
     disable-swagger-default-url: true
     tryItOutEnabled: false
-    path: /swagger-ui
+    path: /api/v5/swagger-ui
     url: /v3/api-docs/swagger.yaml
 management:
   endpoints:
